cleanup, formatting and new java features